Fixed "add to cart" alignment on touch devices when price aside name is used

--- a/web/css/layout/listing/_products.less
+++ b/web/css/layout/listing/_products.less
@@ -290,7 +290,6 @@
                 .product-item-details {
                     flex-direction: row;
                     flex-wrap: wrap;
-                    align-content: flex-start;
                     > * {
                         width: 100%;
                         order: 10;
